--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:RPZsywrvcBQIWQxCeAioUSxxsyNmgakA@postgres.railway.internal:5432/railway
+DATABASE_URL=ecto://postgres:postgres@localhost:5432/todoist_clone_dev
 
